--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
+  "homepage": "https://hadryansilva.github.io/secret-word",
   "name": "secret-word",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
